font size fix fix on mobile

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -37,6 +37,12 @@ body,html {
   }
 }
 
+@media screen and (min-width: 875px) {
+  body, html {
+     font-size: 18px;
+  }
+}
+
 
 .btn {
   background-color: $buttonsDefaultBackground;
